# CREATE_LAB_Binder_Jet_Printer

./: .gitignore  BJ_PRINTER.pro  Binder_Jet_Printer.sln  Binder_Jet_Printer.vcxproj  Binder_Jet_Printer.vcxproj.filters  CMakeLists.txt  JetServer.h  Jet_Control.cpp  MicroJet.h  MicroJet_Functions.h  PrinterSettings.txt  QT_Framework.pro  README.md  STL_Slicer_Dual.py  STL_Slicing_Viewer_Zack.py  STL_Slicing_Viewer_mod3.py  arrays.c  bjprinter.rc  commandcodes.cpp  commandcodes.h  cpp.hint  fakegclib.h  gclib.h  gclib.lib  gclibo.c  highspeedlinewidget.h  jettingwidget.ui  lineprintdata.cpp  lineprintwidget.cpp  lineprintwidget.h  lineprintwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputwindow.cpp  outputwindow.h  powdersetupwidget.cpp  powdersetupwidget.h  powdersetupwidget.ui  (+10 more)
.qtcreator/: project.json
Debug/Binder_J.9BB1DFEA.tlog/: Binder_Jet_Printer.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Galil-Arduino-Motor_Driver/: Galil-Arduino-Motor_Driver.ino
QT_Framework/: JetServer.h  JetServer_prog.h  PrinterSettings.txt  QT_Framework.pro  arrays.c  fakegclib.cpp  fakegclib.h  gclib.h  gclib.lib  gclib_errors.h  gclib_record.h  gclibo.h  gclibo.lib  lineprintdata.cpp  lineprintdata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputwindow.cpp  outputwindow.ui  printobject.cpp  printobject.h  programwindow.cpp  programwindow.h  programwindow.ui  progwindow.cpp  progwindow.h  progwindow.ui
QT_GUI/: Screen01.ui.qml  Screen01.ui.qml.autosave  untitled.qml  untitled.qmlproject  untitled.qmlproject.qtds
arduino/: mister.ino
build-QT_Framework-Desktop_Qt_6_1_1_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  PrinterSettings.txt  ui_mainwindow.h  ui_programwindow.h  ui_progwindow.h
build-QT_Framework-Desktop_Qt_6_1_1_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_programwindow.cpp  moc_progwindow.cpp  moc_ui_programwindow.cpp
build-QT_Framework-Desktop_Qt_6_1_1_clang_64bit-Debug/: Makefile  moc_progwindow.cpp
build-QT_Framework-Desktop_Qt_6_1_1_clang_64bit-Debug/QT_Framework.app/Contents/: Info.plist
build-QT_Framework-Desktop_Qt_6_1_1_clang_64bit-Debug/QT_Framework.app/Contents/MacOS/: QT_Framework
build-QT_Framework-Desktop_Qt_6_1_1_clang_64bit-Profile/: Makefile  moc_mainwindow.cpp  moc_svgview.cpp  ui_mainwindow.h  ui_progwindow.h
build-QT_Framework-Desktop_Qt_6_1_1_clang_64bit-Profile/QT_Framework.app.dSYM/Contents/: Info.plist
build-QT_Framework-Desktop_Qt_6_1_1_clang_64bit-Profile/QT_Framework.app.dSYM/Contents/Resources/DWARF/: QT_Framework
build-QT_Framework-Desktop_Qt_6_1_1_clang_64bit-Profile/QT_Framework.app/Contents/MacOS/: QT_Framework
build-QT_Framework-Desktop_Qt_6_1_1_clang_64bit-Release/: Makefile  moc_predefs.h
build-QT_Framework-Desktop_Qt_6_1_1_clang_64bit-Release/QT_Framework.app/Contents/MacOS/: QT_Framework
build-QT_Framework-Desktop_Qt_6_1_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.QT_Framework.Debug  object_script.QT_Framework.Release  ui_mainwindow.h  ui_messageoutputwindow.h  ui_outputwindow.h  ui_progwindow.h
build-QT_Framework-Desktop_Qt_6_1_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_messageoutputwindow.cpp  moc_outputwindow.cpp  moc_progwindow.cpp  moc_svgview.cpp
build-QT_Framework-Desktop_Qt_6_1_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release
build-QT_Framework-Desktop_Qt_6_1_2_MinGW_64_bit-Release/release/: moc_mainwindow.cpp
cmake/: Findueyeapi.cmake
include/: asyncserialdevice.h  bedmicroscope.h  datarecordpoller.h  dmc4080.h  ginterrupthandler.h  gmessagehandler.h  gmessagepoller.h  heatlamp.h  jetdrive.h  lineprintdata.h  mainwindow.h  mfjdrv.h  mister.h  mjdriver.h  outputwindow.h  pcd.h  printer.h  printhread.h  printobject.h
include/camera/: camera.h  cameralist.h  display.h  eventthread.h  graphicsview.h  queyeimage.h
include/dropletanalyzer/: KDSignalThrottler.h  dropletanalyzer.h  dropletanalyzerwidget.h  dropletgraphwindow.h  imageviewer.h  linearanalysis.h
include/widgets/: bedmicroscopewidget.h  dropletobservationwidget.h  heatlampwidget.h  highspeedlinewidget.h  jettingwidget.h  lineprintwidget.h  mjprintheadwidget.h  powdersetupwidget.h  pressurecontrollerwidget.h  printerwidget.h
src/: JetServer.h  asyncserialdevice.cpp  bedmicroscope.cpp  datarecordpoller.cpp  dmc4080.cpp  ginterrupthandler.cpp  gmessagehandler.cpp  gmessagepoller.cpp  heatlamp.ccp  heatlamp.cpp  jetdrive.cpp  jetdrive.h  lineprintdata.cpp  lineprintdata.h  main.cpp  mainwindow.cpp  mainwindow.h  mfjdrv.cpp  mister.cpp  mjdriver.cpp  outputwindow.cpp  outputwindow.h  pcd.cpp  printer.cpp  printer.h  printhread.cpp  printhread.h  svgview.cpp  svgview.h  vec2.h
src/camera/: camera.cpp  camera.h  cameralist.cpp  display.cpp  eventthread.cpp  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  property_class.h  queyeimage.cpp  subwindow.cpp  subwindow.h  utils.cpp  utils.h
src/dmc/: Line_Print.dmc  Line_Print_Jet_Freq.dmc  Line_Print_Jet_Freq_old.dmc  Line_Print_Jet_Freq_variable.dmc
src/dropletanalyzer/: KDSignalThrottler.cpp  dropletanalyzer.cpp  dropletanalyzerwidget.cpp  dropletgraphwindow.cpp  imageviewer.cpp  qcustomplot.cpp
src/ui/: bedmicroscopewidget.ui  dropletanalyzerwidget.ui  dropletobservationwidget.ui  heatlampwidget.ui  highspeedlinewidget.ui  jettingwidget.ui  lineprintwidget.ui  mainwindow.ui  mjprintheadwidget.ui  outputwindow.ui  powdersetupwidget.ui  pressurecontrollerwidget.ui
src/widgets/: bedmicroscopewidget.cpp  dropletobservationwidget.cpp  dropletobservationwidget.h  heatlampwidget.cpp  highspeedlinewidget.cpp  highspeedlinewidget.h  jettingwidget.cpp  jettingwidget.h  lineprintwidget.cpp  lineprintwidget.h  mjprintheadwidget.cpp  powdersetupwidget.cpp  powdersetupwidget.h  pressurecontrollerwidget.cpp  printerwidget.cpp  printerwidget.h
